# NesRG

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  imgui.ini
NesRG/: CMakeCache.txt  CMakeLists.txt  main.cpp  opcodes.csv  opcodes.py  stripchars.py
NesRG/gui/: breakpoints.cpp  gui.cpp  main.cpp  tracer.cpp
NesRG/gui/include/: gui.h  main.h  tracer.h
NesRG/include/: controls.h  cpu.h  mem.h  opcodes.h  ppu.h  renderer.h  sdlgfx.h  types.h
NesRG/nes_apu_emu/nes_apu/: blargg_common.h
NesRG/python/: opcodes.csv  opcodes.py  switchcases.txt
NesRG/src/: apu.cpp  controls.cpp  cpu.cpp  mapper.cpp  mappers.cpp  mem.cpp  ppu.cpp  renderer.cpp  sdlcc.cpp  sdlcore.cpp  sdlgfx.cpp
NesRG/src/include/: apu.h  controls.h  cpu.h  mappers.h  mem.h  opcodes.h  ppu.h  renderer.h  sdlcc.h  sdlcore.h  sdlgfx.h  types.h
NesRG/src/mappers/: mapper000.cpp  mapper001.cpp  mapper001.h  mapper002.cpp  mapper003.cpp  mapper004.cpp  mapper005.cpp  mapper007.cpp  mapper009.cpp  mappers.h
NesRG/src/mappers/include/: mapper001.h  mapper002.h  mapper004.h  mapper009.h  mappers.h
NesRG/windows/: breakpoints.cpp  breakpoints.h  breakpointwindow.cpp  debugger.cpp  debugger.h  debugwindow.cpp  gui.cpp  gui.h  guigl.cpp  main.cpp  memorywindow.cpp  registerswindow.cpp  tracer.cpp  tracer.h
NesRG/windows/include/: breakpoints.h  debugwindow.h  gui.h  guigl.h  main.h  tracer.h
NesRG/winnative/: main.cpp
assets/: imgui.ini
